--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-runtime": "^6.23.0",
     "bundle-loader": "^0.5.5",
     "css-loader": "^0.27.3",
+    "cssnano": "^3.10.0",
     "domain-task": "^3.0.0",
     "event-source-polyfill": "^0.0.9",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -27,6 +28,7 @@
     "moment": "^2.18.1",
     "node-noop": "^1.0.0",
     "normalize.css": "^6.0.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "rc-dialog": "^6.5.8",
     "react": "^15.4.2",
     "react-big-calendar": "^0.14.0",
