minor fix dayoff display

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "LocalSQLServer": "Server=tcp:192.168.0.222,1433;Database=MpsCheck;User Id=SA;Password=mps@9338430;",
-    "Azure": "Server=tcp:192.168.0.88,1433;Initial Catalog=MpsCheck;Persist Security Info=False;User ID=SA;Password=mps@9338430;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "LocalSQLServer": "Server=tcp:192.168.0.88,1433;Initial Catalog=MpsCheck_2;Persist Security Info=False;User ID=SA;Password=mps@9338430;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+    "Azure": "Server=tcp:192.168.0.88,1433;Initial Catalog=MpsCheck;Persist Security Info=False;User ID=SA;Password=mps@9338430;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
