--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalSQLServer": "Server=tcp:192.168.0.88,1433;Initial Catalog=MpsCheck_2;Persist Security Info=False;User ID=SA;Password=mps@9338430;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+    "LocalSQLServer": "Data Source=tcp:35.201.129.238,1433;Initial Catalog=mpscheck;Integrated Security=False;User ID=SA;Password=ehCRdUx%QjT0UWL%Mc8eoVcec!aYsp;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;",
     "Azure": "Server=tcp:192.168.0.88,1433;Initial Catalog=MpsCheck;Persist Security Info=False;User ID=SA;Password=mps@9338430;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
